--- a/templates/portfolio_detail.html
+++ b/templates/portfolio_detail.html
@@ -410,6 +410,7 @@ async function updateCashBalance(event) {
             headers: {
                 'Content-Type': 'application/json',
             },
+            credentials: 'include',
             body: JSON.stringify({
                 new_cash_balance: newBalance,
                 notes: notes
